-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.1
-
None
-
macOS Sierra 10.12.6
Qt 5.9.1 (from brew)
-
534262b63140c7a6d5d974e97d2164bb8023f449
qml_freeze.qml causes a freeze and no view is showed.
qml_no_freeze.qml works and shows the view.
Only difference is "anchors.fill: parent" is commented out in the GridLayout.
To reproduce:
$ qmlscene --verbose qml_freeze.qml Qt 5.9.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.1.0 (clang-802.0.42) (Apple))
qml_freeze.qml
import QtQuick 2.5 import QtQuick.Controls 1.4 import QtQuick.Layouts 1.1 ApplicationWindow { visible: true ColumnLayout { anchors.fill: parent GridLayout { anchors.fill: parent Label { text: "Hello" } SpinBox { } } RowLayout { } } }
qml_no_freeze.qml
import QtQuick 2.5 import QtQuick.Controls 1.4 import QtQuick.Layouts 1.1 ApplicationWindow { visible: true ColumnLayout { anchors.fill: parent GridLayout { // anchors.fill: parent Label { text: "Hello" } SpinBox { } } RowLayout { } } }
For Gerrit Dashboard: QTBUG-63303 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
211861,5 | Document when anchors.fill can and can not be used | 5.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
212535,3 | Warn if a layout has children with anchors | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |