Warn if a layout has children with anchors

We get several bug reports due to this mistake. Print a warning about
it and that it *might* eat your cats.

Task-number: QTBUG-63303
Change-Id: I0b1ae21dc4419efee88623765a8d6dd302fbc1f4
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>